@@ -1,5 +1,10 @@
 2007-08-09  Sven Neumann  <sven@gimp.org>
 
+	* app/dialogs/preferences-dialog.c: tweaked spacings on the Color
+	Management page.
+
+2007-08-09  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/print/print-page-layout.c: fixed the behavior when
 	changing the unit.
 
